add badge fucntion
